# microros-h7-pio

./: README.md  platformio.ini  qtplot.py
custom_msgs_ws/src/custom_msgs/: CMakeLists.txt  package.xml
custom_msgs_ws/src/custom_msgs/msg/: ImuInfo.msg
imu_ws/src/imu_visualize/: CMakeLists.txt  package.xml  setup.cfg  setup.py
imu_ws/src/imu_visualize/config/: default.rviz
imu_ws/src/imu_visualize/imu_visualize/: imu_odometry_node.py  imu_publisher_node.py  imu_visualizer_node.py  pg_euler_plot.py
imu_ws/src/imu_visualize/launch/: imu_visualization.launch.py
imu_ws/src/imu_visualize/msg/: Euler.msg
include/: SimpleI2C.h  hmc5883l.h  imu.h  mpu6050.h  mpu6050_register.h  qmc5883l.h
lib/I2Cdev/: I2Cdev.cpp  I2Cdev.h
lib/micro-ros-eth/: w5500_ethernet_transport.cpp  w5500_ethernet_transport.h
src/: main.cpp  main_ethernet_test.cpp  main_imu.cpp
